fix Heading text align Properly

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ header {
 .banner-text {
     position: absolute;
     top: 35%;
+    width: 100%;
     z-index: 1;
 }
 
